Overflow and wrapping fixed. Started working on TAB navigation (unfinished)

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -2,12 +2,7 @@ body{
   background-color: $main-bg-color;
   font-family: $sys-font;
   color: $main-text-color;
-}
-
-.content-wrapper{
-  width:100%;
-  height:100%;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .simple-padding{
@@ -20,5 +15,20 @@ body{
   text-align: right;
 }
 
+// Overriding some purecss settings. WHY have the grid do anything
+// other than GRID related stuff! Leave text/font alone!
+.pure-g {
+  font-family: inherit;
+}
 
+.pure-g [class *= "pure-u"] {
+  font-family: inherit;
+}
+
+// Allow for the disabling of the flex-flow: wrap.
+// This allows me to use overflow:hidden without pure-g wrapping on
+// me! ... but only for those pure-g elements I want.
+.pure-g-nw{
+  flex-flow: row;
+}
 
