--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -8,3 +8,8 @@ $menu-bg-color: #6200EE;
 $menu-text-color: #FFFFFF;
 
 $canvas-bg-color: #212121;
+
+$tabnav-bg: #878787;
+$tabnav-text: #000;
+$tabnav-content-bg: #EFEFEF;
+$tabnav-content-text: #000;
